# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import resultsRouter from "./results";
+import progressRouter from "./progress";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(resultsRouter);
+router.use(progressRouter);
 
 export default router;
